examples/test/testpolicy12875.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12875
  namespace: namespace303
spec:
  podSelector:
    matchLabels:
      key9: value28
      key6: value11
      key37: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value44
      podSelector:
        matchLabels:
          key32: value47
          key6: value9
